libgda 5.91.0
 - Added support for PostgreSQL version up to 11.0
 - Added new GdaText type for large texts types support
 - Added new GdaHandlerText type for large texts types handler support
 - Added new GdaDataModelSelect objects replacing GdaDataSelect's rerun()
 - GdaHandler now supports value transformation, if possible, before set it
 - Ported almost all public API to use g_autoptr() and remove public private struct
 - GdaHolder now is GdaAttributeManager free, replaced by GObect properties
 - GdaTime ported to GDateTime, with improved time handling and defaulting to UTC time
 - Fixed segfaults
 - Fixed meta data generation engine
 - Fixed PostgresSQL provider meta data generation integration
 - Fixed open connections to SQLite, PostgreSQL and MySQL providers
 - Blacklisted providers: FireBird, Oracle, Java ODBC, MS Access, BDB, LDAP, MySQL
 - Fixed warnings
 - Removed Autotools (was 89479e9d2372177036d2d0f6b01a50e5f21d076f 05 april 2019)
 - Simplified providers plugin system
 - Many memory leaks fixes
 - Aisolate LDAP as a provider, no more in main library
 - Fixed documentation generation using meson
 - Removed Autotools build system
 - Added experimental features, use -Denable-experimental=true to use them

libgda-ui 5.91.0
 - Ported almost all public API to use g_autoptr() and remove public private struct
 - Fixed segfaults
 - GDA Browser is now able to open and use connections to supported providers
 - GDA Control Center now is able to create Data Sources
 - Fixed warnings
 - Replaced deprated GTK+ 3.0 API
 - Moved as a experimental features

================================================================================
libgda 5.90.1
 - Minor Autotools fixes for distribution

libgda-ui 5.90.1
 - Minor Autotools fixes for distribution

libgda 5.90.0
 - Removed Deprecated API from 5.x and 4.x series
 - Added new DDL module, from Pavlo Solntsev <p.sun.fun@gmail.com>
 - Removing public fields in GdaSet, adding API for GObject Introspection